@@ -1,6 +1,7 @@
 v4.19.19 ??? September 2019
   - Added sipIsOwnedByPython(), sipRegisterExitNotifier() and
     sipVisitWrappers() to the C API.
+  - Deprecated the -B option to sip.
 
 v4.19.18 5th July 2019
   - Bug fixes.
